# themeswitcher

./: .eslintignore  .eslintrc.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  ego_description.txt  meson.build  meson_options.txt  package-lock.json  package-lock.json.license  package.json
.gitlab/issue_templates/: Bug report.md  Bug report.md.license  Feature request.md  Suggestion.md  Theme request.md
.gitlab/merge_request_templates/: Bug fix - WIP.md  Bug fix.md  New feature - WIP.md  New feature.md  New theme support - WIP.md  New theme support.md  Translation - WIP.md  Translation.md
build-aux/: Dockerfile  get_release_notes.py  pack.sh
lint/: eslintrc-extension.yml  eslintrc-gjs.yml  eslintrc-shell.yml
res/: Dockerfile  ego_description.txt  screenshot.png.license
src/: compat.js  config.js  debug.js  extension.js  meson.build  metadata.json  metadata.json.in  prefs.js  prefs.ui  utils.js  variants.js
src/data/: extension.gresource.xml  meson.build  org.gnome.shell.extensions.nightthemeswitcher.gresource.xml  org.gnome.shell.extensions.nightthemeswitcher.gschema.xml  preferences.gresource.xml
src/data/ui/: BackgroundButton.ui  BackgroundsPage.ui  ClearableEntry.ui  CommandsPage.ui  ContributePage.ui  SchedulePage.ui  ShortcutButton.ui  ThemesPage.ui  TimeChooser.ui
src/enums/: SourceType.js  SunTime.js  Time.js
src/modules/: Backgrounder.js  Commander.js  CursorThemer.js  GtkThemer.js  GtkVariants.js  IconThemer.js  Nightlighter.js  SettingsManager.js  ShellThemer.js  ShellVariants.js  Source.js  SourceLocation.js  SourceSchedule.js  Switcher.js  SwitcherCommands.js  SwitcherTheme.js  Themer.js  Timer.js  TimerLocation.js  (+4 more)
tests/: .eslintrc.yml  Adapta.js  Adwaita.js  Arc.js  Cabinet.js  Canta.js  Flat-Remix-GTK.js  HighContrast.js  Layan.js  Matcha.js  Materia.js  Mojave.js  Prof-Gnome-3.js  Qogir.js  Vimix.js  Yaru.js  _variants.js.template  default.js  meson.build  prepare_variants.sh
website/: index.html  style.css
(+136 files in other folders)
